kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: info8-ingress
  namespace: info8
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: info8-strip-repo-post@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /repo-post
        pathType: Prefix
        backend:
          service:
            name: repo-post
            port:
              number: 8081
      - path: /repo-social
        pathType: Prefix
        backend:
          service:
            name: repo-social
            port:
              number: 8082
      - path: /srvc-search
        pathType: Prefix
        backend:
          service:
            name: srvc-search
            port:
              number: 8083
      - path: /srvc-user-timeline
        pathType: Prefix
        backend:
          service:
            name: srvc-user-timeline
            port:
              number: 8084
      - path: /srvc-home-timeline
        pathType: Prefix
        backend:
          service:
            name: srvc-home-timeline
            port:
              number: 8085
